--- a/Castle Falkenstein/castle_falkenstein.css
+++ b/Castle Falkenstein/castle_falkenstein.css
@@ -15,7 +15,7 @@ h2 {
 
 label {
 	display: inline-block;
-	width: 31%;
+	width: 55%;
 }
 
 input {
@@ -34,6 +34,10 @@ textarea {
 /* Targetted styling that only effects elements with these classes */
 input.sheet-short {
 	width: 17%;
+}
+
+select.sheet-short-select {
+	width: 25%;
 }
 
 select.sheet-dtype {
